--- a/css/styles.css
+++ b/css/styles.css
@@ -32,16 +32,14 @@
 
 .top-nav {
     font-size: 20px;
-
-    padding: 0rem 0rem 1.5rem 0rem;
+    margin: 5px 0 0 0;
 }
 
 a, .top-nav a {
     color: #7aa6da;
 
     border: 2px solid transparent;
-    padding: 0rem, 1rem, 0rem, 1rem;
-
+    margin: 0 0 0 0;
     transition: border .15s ease-in-out, color .15s ease-in-out;
 }
 
@@ -112,14 +110,4 @@ td img{
     display: block;
     margin-left: auto;
     margin-right: auto;
-}
-
-.full-height {
-    height: 100%;
-    margin: auto;
-}
-
-.body-center {
-    display: table-cell;
-    vertical-align: middle;
 }
