--- a/css/index-style.css
+++ b/css/index-style.css
@@ -18,7 +18,7 @@ body {
     font-family: Consolas,"courier new";
     font-size: 30px;
 
-    margin: 15rem 0 0 1rem;
+    margin: 15rem 0 0 0;
     text-align: center;
 
     background-color: #252525;
