Resume and Github link icons added.

--- a/css/index-style.css
+++ b/css/index-style.css
@@ -2,13 +2,13 @@ a {
     color: #7aa6da;
 
     border: 2px solid transparent;
+    padding: 4px;
 
     transition: border .15s ease-in-out, color .15s ease-in-out;
 }
 
 a:hover, a:focus {
     border: 2px solid orange;
-
     color: orange;
     text-decoration: none;
 }
@@ -39,4 +39,14 @@ ul {
     margin: 0 auto;
     max-width: 1200px;
     padding: 0;
+}
+
+.github-link {
+    background-image: url(/media/GitHub-Mark-32px.png);
+    background-repeat: no-repeat;
+    background-position: left center;
+    
+    display: inline;
+    margin: 0 40px 0 0;
+    padding: 0 0 0 40px;
 }
