--- a/includes/top-nav.html
+++ b/includes/top-nav.html
@@ -2,5 +2,6 @@
     <a aria-labelledby="Home page" href="index.html">Home</a>
     <a aria-labelledby="About me page" href="about.html">About Me</a>
     <a aria-labelledby="Photos page" href="photos.html">Photos</a>
-    <a aria-labelledby="Resume page" href="resume.html">Resume</a>
+    <a aria-labelledby="Resume page" href="resume.html" class="resume-link">Resume</a>
+    <a aira-labelledby="Github profile" href="https://github.com/dcalvo4-dev" target="_blank" class="github-link">GitHub</a>
 </nav>
