--- a/css/index-style.css
+++ b/css/index-style.css
@@ -18,9 +18,6 @@ body {
     font-family: Consolas,"courier new";
     font-size: 30px;
 
-    margin: 15rem 0 0 0;
-    text-align: center;
-
     background-color: #252525;
 }
 
@@ -33,22 +30,30 @@ footer {
     padding: 500px 0 100px 0;
 }
 
-ul {
-    list-style-type: none;
-
-    display: flex;
-
-    margin: 0 auto;
-    max-width: 1200px;
-    padding: 0;
-}
-
 .github-link {
     background-image: url(/media/GitHub-Mark-32px.png);
     background-repeat: no-repeat;
     background-position: left center;
+    background-size: 27px 27px;
     
-    display: inline;
-    margin: 0 40px 0 0;
-    padding: 0 0 0 40px;
+    padding-left: 35px;
+}
+
+.main-menu {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+
+    margin: 0 auto;
+    max-width: 1350px;
+    padding: 150px 35px 0px 35px;
+}
+
+.resume-link {
+    background-image: url(/media/resume-icon.png);
+    background-repeat: no-repeat;
+    background-size: 30px 30px;
+    background-position: left center;
+    
+    padding-left: 32px;
 }
