--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@
     background-size: 20px 20px;
     background-position: left center;
 
-    padding: 0 0 0 20px;
+    padding-left: 20px;
 }
 
 .text {
