--- a/includes/top-nav.html
+++ b/includes/top-nav.html
@@ -1,7 +1,7 @@
-<nav class="top-nav">
-    <a aria-labelledby="Home page" href="index.html">Home</a>
-    <a aria-labelledby="About me page" href="about.html">About Me</a>
-    <a aria-labelledby="Photos page" href="photos.html">Photos</a>
-    <a aria-labelledby="Resume page" href="resume.html" class="resume-link">Resume</a>
-    <a aira-labelledby="Github profile" href="https://github.com/dcalvo4-dev" target="_blank" class="github-link">GitHub</a>
+<nav role="navigation" class="top-nav">
+    <a href="index.html">Home</a>
+    <a href="about.html">About Me</a>
+    <a href="photos.html">Photos</a>
+    <a href="resume.html" class="resume-link">Resume</a>
+    <a href="https://github.com/dcalvo4-dev" target="_blank" class="github-link">GitHub</a>
 </nav>
