--- a/includes/top-nav.html
+++ b/includes/top-nav.html
@@ -1,7 +1,7 @@
 <nav role="navigation" class="top-nav">
     <a href="index.html">Home</a>
     <a href="about.html">About Me</a>
-    <a href="photos.html">Photos</a>
+    <!-- <a href="photos.html">Photos</a> -->
     <a href="resume.html" class="resume-link">Resume</a>
     <a href="https://github.com/dcalvo4-dev" target="_blank" class="github-link">GitHub</a>
 </nav>
