--- a/css/styles.css
+++ b/css/styles.css
@@ -5,18 +5,18 @@
 #money_saver, #pushups_gif {
     width: 400px;
     height: auto;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    display: none;
 }
 
 .center {
     text-align: center;
 }
 
-.container {
-    position:relative;
-    overflow:hidden;
+.column {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
 }
 
 .gallery {
@@ -39,12 +39,6 @@
     padding-left: 25px;
 }
 
-.left-col {
-    float: left;
-    margin-left: 0;
-    max-width: 630px;
-}
-
 .resume-link {
     background-image: url(/media/resume-icon.png);
     background-repeat: no-repeat;
@@ -52,6 +46,13 @@
     background-position: left center;
 
     padding-left: 20px;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex-grow: 1;
 }
 
 .text {
