Added a pdf viewer for my resume. I also began updating aria-albels and tabbing order to improve screen reader navigation.

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,13 @@
     margin-right: auto;
 }
 
+#resume {
+    height: 1000px;
+    width: 1350px;
+    margin: 25px auto 0 auto;
+    border: none;
+}
+
 .center {
     text-align: center;
 }
@@ -26,7 +33,7 @@
 }
 
 .gallery img {
-    max-width: 100%;
+    max-width: 1350px;
     min-width: 400px;
     height: auto;
 }
