Revert "Updating Flexboxes"

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,9 @@
 #money_saver, #pushups_gif {
     width: 400px;
     height: auto;
-    display: none;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #resume {
@@ -19,11 +21,9 @@
     text-align: center;
 }
 
-.column {
-    display: flex;
-    flex-direction: column;
-    flex-basis: 100%;
-    flex: 1;
+.container {
+    position:relative;
+    overflow:hidden;
 }
 
 .gallery {
@@ -46,6 +46,12 @@
     padding-left: 25px;
 }
 
+.left-col {
+    float: left;
+    margin-left: 0;
+    max-width: 630px;
+}
+
 .resume-link {
     background-image: url(/media/resume-icon.png);
     background-repeat: no-repeat;
@@ -53,13 +59,6 @@
     background-position: left center;
 
     padding-left: 20px;
-}
-
-.row {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    flex-grow: 1;
 }
 
 .text {
