--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,4 +1,3 @@
 <footer>
-    Powered by HTML, CSS, and Javascript.<br>
-    Designed and maintained by Daniel Calvo.
+    Powered by <a href="https://github.com/">Github.com</a>
 </footer>
