--- a/css/index-style.css
+++ b/css/index-style.css
@@ -1,3 +1,10 @@
+#type-writer {
+    text-align: center;
+    
+    margin: 0 auto;
+    width: 1350px;
+}
+
 a {
     color: #7aa6da;
 
@@ -43,6 +50,8 @@ footer {
     display: flex;
     flex-flow: column wrap;
     align-items: center;
+
+    list-style-type: none;
 
     margin: 0 auto;
     max-width: 1350px;
