--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,42 @@
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
+
+#about-type-writer {
+    text-align: center;
+    margin: 80px auto 10px auto;
+    width: 1350px;
+    border-right: solid 2px rgba(255,165,0,.75);
+    white-space: nowrap;
+    overflow: hidden;
+    color: white;
+    /* Animation */
+    animation:  animated-text 1.5s steps(8) 1s 1 normal both,
+                animated-cursor 500ms steps(8) infinite;
+}
+
+/* text animation */
+
+@keyframes animated-text{
+  from {
+        width: 0;
+    }
+
+  to {
+        width: 173px;
+    }
+}
+
+/* cursor animations */
+
+@keyframes animated-cursor{
+  from {
+        border-right-color: rgba(255,165,0,.8);
+    }
+
+  to {
+        border-right-color: transparent;
+    }
+}
+
 #money_saver, #pushups_gif {
     width: 400px;
     height: auto;
@@ -62,6 +101,7 @@
 
 .top-nav {
     font-size: 20px;
+    font-family: 'Source Code Pro', monospace;
     margin: 5px 0 0 0;
     padding: 0 0 25px 0;
 }
@@ -83,7 +123,7 @@ a:hover, a:focus {
 
 body {
     color: white;
-    font-family: Consolas,"courier new";
+    font-family: 'Source Code Pro', monospace;
     font-size: 15px;
 
     margin: 0 auto;
