Typewriter Update/Theme switch proto
Updated my about page typewriter because the last letter in "About Me" was getting cut too short. I added a new typewriter for my Resume page for consistency.

I also started a prototype for the theme switcher. I can't seem to get Bootstrap to load properly.

For next time: Continue working on the theme switcher. Ideally the switch is concise. I think I will start with light and dark themes first. In the future I can transition over to multiple color themes to address the different kinds of color blindness.

--- a/css/index-style.css
+++ b/css/index-style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
 
-#type-writer {
+#typewriter {
     text-align: center;
     margin: 80px auto 10px auto;
     width: 1350px;
@@ -12,8 +12,8 @@
 }
 
 /* Animation */
-#type-writer {
-  animation: animated-text 5.5s steps(38) 1s 1 normal both,
+#typewriter {
+  animation: animated-text 2s steps(38) 1s 1 normal both,
              animated-cursor 500ms steps(38) infinite;
 }
 
