--- a/includes/theme-switch.html
+++ b/includes/theme-switch.html
@@ -1,27 +1,27 @@
-<!DOCTYPE html>
-
-<html lang="en">
+<html>
     <head>
         <div id="libraries"></div>
-        <!-- Stylesheet -->
-        <link href="/css/styles.css" type="text/css" rel="stylesheet">
+        
         <!-- Loader -->
         <script src="//code.jquery.com/jquery-1.10.2.js"></script>
         <script>
             $(function(){
                 $("#top-nav").load("/includes/top-nav.html");
-                $("#footer").load("/includes/footer.html");
                 $("#libraries").load("/includes/libraries.html");
             });
         </script>
-
-        <title>Resume</title>
     </head>
+
     <body>
         <div id="top-nav"></div>
 
-        <h1 id="resume-typewriter">Resume</h1>
-        <iframe src="/media/Calvo, Daniel - Resume.pdf" id="resume"></iframe>
+        <!-- Material switch -->
+        <div class="switch">
+            <label>
+                Off
+                <input type="checkbox">
+                <span class="lever"></span> On
+            </label>
+        </div>
     </body>
-    <div id="footer"></div>
 </html>
