--- a/css/styles.css
+++ b/css/styles.css
@@ -119,6 +119,17 @@
     padding-left: 20px;
 }
 
+.round {
+
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 120px;
+    height: 20px;
+}
+
 .text {
     position: relative;
     top: 50%;
