--- a/includes/theme-switch.html
+++ b/includes/theme-switch.html
@@ -38,7 +38,7 @@
         function update_theme(theme) {
             let this_theme = document.getElementById('theme-switcher-id');
 
-            this_theme.href = `../themes/${theme}.css`;
+            this_theme.href = `/themes/${theme}.css`;
         }
     </script>
     <style>
